--- a/index.html
+++ b/index.html
@@ -94,8 +94,10 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav mx-auto py-0">
           <a href="index.html" class="nav-item nav-link active">Home</a>
-          <!----------  <a href="about.html" class="nav-item nav-link">About</a>
           <a href="service.html" class="nav-item nav-link">Service</a>
+          <a href="contact.html" class="nav-item nav-link">Contact</a>
+          <!----------  <a href="about.html" class="nav-item nav-link">About</a>
+
           <a href="product.html" class="nav-item nav-link">Product</a>-------->
 
           <!---------
