--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav mx-auto py-0">
           <a href="index.html" class="nav-item nav-link active">Home</a>
-          <a href="service.html" class="nav-item nav-link">Service</a>
+          <a href="service.html" class="nav-item nav-link">Services</a>
           <a href="contact.html" class="nav-item nav-link">Contact</a>
           <!----------  <a href="about.html" class="nav-item nav-link">About</a>
 
